<resources>
    <string name="app_name">talk2memo</string>
    <string name="subject">Subject</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="subjects">Configure Subjects</string>
    <string name="language">Choose Language</string>
    <string name="info">Imprint</string>
    <string name="faq">FAQ</string>
    <string name="recipients">Configure Recipients</string>
    <string name="settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="recipient_info">Recipient Info</string>
    <string name="add">Add</string>
    <string name="use_subject">Use Subject</string>
    <string name="send_audio_file_to">Send Audio file to</string>
    <string name="content_of_email">Content of Email</string>
    <string name="send_email">Send Email</string>
    <string name="no_recording_found">No Recoding Found</string>
    <string name="recording_deleted">Recording Deleted</string>
    <string name="saving_file">Saving File</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete?</string>
    <string name="record_first">Please record voice first</string>
    <string name="addrecipients_first">Please first add recipients from settings</string>
    <string name="unknown_error">Something went wrong, please try again</string>
    <string name="saved">Saved</string>
    <string name="email_not_valid">Email is not Valid</string>
    <string name="email_already_exists">Email already Exists</string>
    <string name="audio_deleted">Audio File Deleted</string>
    <string name="empty_subject">You cannot select empty Subject</string>
    <string name="empty_subject_2">Subject cannot be empty</string>
    <string name="empty_content">You cannot select empty Content</string>
    <string name="subject_already">Subject already Exists</string>
    <string name="minimalistic">Minimalistic</string>
    <string name="mode">Mode</string>


    <string-array name="languages">
        <item>English</item>
        <item>Deutsch</item>
    </string-array>
    <string name="email_body">Message from talk2memo</string>
    <string name="email_sent_successfully">Message Sent</string>
    <string name="email_not_sent_successfully">Message Not Sent</string>
    <string name="audio_file_name">Name of Audio file (*.wav)</string>
    <string name="content">Content</string>
    <string name="show_page_content">Show the page &quot;Content&quot;</string>
    <string name="show_page_subject">Show the page &quot;Select the subject&quot;</string>
    <string name="send_via_server">Send Via Talk2Memo-Server</string>
    <string name="send_via_email_programm">Send Via your own e-mail program</string>
    <string name="min_settings_desc">"Here you have the possibility to choose which pages you would like to show to configure the mail.\nYou can also decide whether the message should be sent via your mail program or alternatively simply via our server."</string>
    <string name="user_below_line_subject">Use following line as Subject</string>
    <string name="use_following_content">Use the following as the content of the e-mail</string>
    <string name="email_settings">E-mail Settings</string>
    <string name="upload_success">File Uploaded Successfully</string>
    <string name="uploading">Uploading at</string>
    <string name="upload_error">Uploading Error</string>
    <string name="upload_cancelled">Upload Cancelled</string>
    <string name="file_name_default">audio_message</string>
    <string name="default_subject">Message from John Doe</string>
    <string name="default_content">Attached audio file to edit</string>
</resources>
