<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context=".Minimalistic">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="-2dp"
        android:background="@drawable/bglist">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/email_settings"
            android:textColor="#616161"
            android:textStyle="bold"
            android:paddingLeft="12dp"
            android:gravity="bottom"
            android:layout_marginTop="8dp"
            android:textSize="24sp"/>

        <ImageButton
            android:id="@+id/btn_addButton"
            android:layout_width="45dp"
            android:visibility="gone"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_add_black_24dp"
            android:background="@drawable/bgbutton"
            android:layout_alignParentLeft="true"/>

        <ImageButton
            android:onClick="goBack"
            android:id="@+id/btn_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/bgbutton"
            android:src="@drawable/ic_close_black_24dp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/min_settings_desc"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="16sp"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/show_page_subject"
                android:id="@+id/rb_show_sub_page"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/rb_use_sub_fol"
                android:text="@string/user_below_line_subject"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_mini_subject"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="#319846"
                android:text="@string/default_subject"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"/>



            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/show_page_content"
                android:id="@+id/rb_show_content_page"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/rb_use_content_fol"
                android:text="@string/use_following_content"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_mini_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="#319846"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/send_via_server"
                android:id="@+id/rb_send_via_server"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/rb_send_via_program"
                android:text="@string/send_via_email_programm"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio_file_name"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_mini_file_name"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="#319846"
                android:text="@string/file_name_default"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
