<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context=".emailSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="#616161"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_margin="2dp"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp"
                android:onClick="goBack"
                android:layout_centerVertical="true"
                android:background="@drawable/bgbutton"
                android:src="@drawable/ic_close_black_24dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                >

            <TextView
                android:id="@+id/txt_minimalistic"
                android:layout_height="50dp"
                android:text="@string/email_settings"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:onClick="showMinimalistic"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"/>

            <TextView
                android:id="@+id/txt_Recipients"
                android:layout_height="50dp"
                android:text="@string/recipients"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"/>

            <TextView
                android:id="@+id/txt_subjects"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/subjects"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:textSize="16sp"
                android:padding="8dp"
                />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/txt_faq"
                android:layout_marginTop="1dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/faq"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:textSize="16sp"
                android:padding="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="2"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="@string/language"
                    android:singleLine="true"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:padding="8dp"
                    />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:id="@+id/sp_languages"
                    android:entries="@array/languages"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"/>

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/info"
                android:onClick="startImprint"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:textSize="16sp"
                android:padding="8dp"
                />

            </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>
